Fixed navigation overlapping event calendar Added navigation to start page on login and event calendar page

--- a/src/main/resources/static/assets/css/events.css
+++ b/src/main/resources/static/assets/css/events.css
@@ -1,4 +1,4 @@
 .content-section {
-  padding-top: 120px;
+  padding-top: 20px;
   padding-bottom: 20px;
 }
